@@ -55,6 +55,8 @@
           (http://www.packetfence.org/mantis/view.php?id=572)
         management IP address in configurator.pl
           (http://www.packetfence.org/mantis/view.php?id=574)
+        determine default gateway in configurator
+          (http://www.packetfence.org/mantis/view.php?id=577)
 
 1.8.0
         unify log management
